Fix font-size, background-position on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ p {
 }
 
 p.note {
-    font-size: 0.7em;
+    font-size: 0.8em;
 }
 
 .duotone {
@@ -114,7 +114,6 @@ section div.text {
 div.full-image {
     height: 100vh;
     background-size: cover;
-    background-position: center;
     position: -webkit-sticky;
     position: sticky;
     top: 0;
@@ -123,6 +122,7 @@ div.full-image {
 div.image-1 {
     background-image: url(../media/folio-about-me.jpg);
     background-size: 100%;
+    background-position: center center;
 }
 
 div.image-2 {
@@ -136,16 +136,18 @@ div.image-3 {
 }
 
 @media (max-width: 800px) {
+    /*
     body {
         font-size: 1em;
     }
+    */
 
     h1 {
         font-size: 2em;
     }
 
     p.note {
-        font-size: 0.8em;
+        font-size: 1em;
     }
 
     section {
@@ -162,5 +164,13 @@ div.image-3 {
 
     div.full-image {
         height: 100vw;
+    }
+    
+    div.image-2 {
+        background-position: center center;
+    }
+
+    div.image-3 {
+        background-position: center center;
     }
 }
